@@ -417,7 +417,8 @@ GUI.OPTIONS.GAMEPLAY.ZOOM_TO_CURSOR,This is for a question to ask if the player 
 GUI.OPTIONS.GAMEPLAY.HIDE_TREES_OBSCURING_SETTLERS,This is an option that makes trees partially transparent when a settler moves behind them,Make trees transparent when obscuring settlers,,,,,,,,,,,,,
 GUI.OPTIONS.MISC.TITLE,,Miscellaneous,,,,,,,,,,,,,
 GUI.OPTIONS.MISC.CRASH_REPORTING_ENABLED,,Allow automatic crash reports,,,,,,,,,,,,,
-GUI.OPTIONS.MISC.HINTS_ENABLED,,Show hints and tutorials in-game,,,,,,,,,,,,,
+GUI.OPTIONS.MISC.HINTS_ENABLED,,Show hints in-game,,,,,,,,,,,,,
+GUI.OPTIONS.MISC.TUTORIAL_ENABLED,,Ask to start the tutorial at game start,,,,,,,,,,,,,
 GUI.OPTIONS.MISC.MAIN_MENU_BACKGROUND_SCROLLING,,Scroll the background on the main menu,,,,,,,,,,,,,
 GUI.OPTIONS.TAB.GRAPHICS,,Graphics,,,,,,,,,,,,,
 GUI.OPTIONS.TAB.AUDIO,,Audio,,,,,,,,,,,,,
