@@ -65,7 +65,7 @@ public class UserPreferences {
 		PAUSE_FOR_NOTIFICATIONS,
 		ACTIVE_MODS,
 		ALLOW_HINTS,
-		DISABLE_TUTORIAL,
+		ENABLE_TUTORIAL,
 		MAIN_MENU_BACKGROUND_SCROLLING,
 
 		TWITCH_TOKEN,
