@@ -1,6 +1,9 @@
-Alpha 8.0.2 - 16th November 2021
+Alpha 8.0.2 - 18th November 2021
 
+- Added an option to re-enable the tutorial
+- Fix for a crash when clicking on the broken shield notification
 - Fix for a crash that could happen while having a tantrum near the map edge
+- Fix for a crash when a dwarf is sleeping and has somehow been pushed out of the edge of the map
 
 Alpha 8.0.1 - 10th November 2021
 
